[Stying] Fix overflow of cards and button not sticking to them

--- a/frontend/src/styles/Board.css
+++ b/frontend/src/styles/Board.css
@@ -1,4 +1,6 @@
 .board {
+    position: relative;
+    
     background-color: #F2B97C;
     width: 250px;
 
